[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/GameHUD.gd" type="Script" id=2]
[ext_resource path="res://graphics/ship.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[node name="GameHUD" type="Control"]
margin_right = 800.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LevelLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -58.0
margin_top = 5.0
margin_right = 58.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LivesLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 43.0
margin_right = 75.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
text = "x3"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LivesTexture" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 43.0
margin_right = 37.0
margin_bottom = 75.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameoverPopup" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -75.0
margin_right = 100.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameoverPopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -81.0
margin_top = 20.0
margin_right = 81.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "Game over!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GameoverPopup"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -64.0
margin_right = -10.0
custom_fonts/font = SubResource( 3 )
text = "Press Space/Enter to restart."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -99.5
margin_top = -19.0
margin_right = 99.5
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "Game Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -120.0
margin_top = 30.0
margin_right = 120.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
text = "Press Escape to unpause or Space/Enter to restart."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
